--- a/index.html
+++ b/index.html
@@ -5,9 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jiwoo Shin Portfolio</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaqueries.css">
+
 </head>
 
 <body>
-    <p>Hello</p> 
+    <nav id="desktop-nav">
+        <div class="logo">Jiwoo Shin</div>
+        <div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+    
+    <nav id="hamburger-menu">
+        div
+    </nav>
+    
+    <section id="profile">
+        <div class="section__pic-container">
+            <img
+            src="./images/profile-image.jpg"
+            alt="Profile Image"
+            class="profile-pic"
+            >
+        </div>
+        <div class="section__text">
+            <p class="section__text__p1">Hello, I'm</p>
+            <h1 class="title">Jiwoo Shin</h1>
+            <p>Undergraduate Student at KAIST</p>
+        </div>
+    </section>
 </body>
 </html>
